--- a/style.css
+++ b/style.css
@@ -1,12 +1,236 @@
-/* *{
+*{
     padding: 0;
     margin: 0;
-} */
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'public sans', sans-serif;
+}
 
 .navbar{
     display: flex;
     position: fixed;
     top: 0;
     width: 100%;
+    background-color: white;
+    padding-bottom: 20px;
+}
+
+.logo img {
+    height: 20px;
+    width: 142px;
+    margin-left: 64%;
+    margin-top: 29px;
+}
+
+ul{
+    margin-left: 23.4%;
+    color: grayblue;
+    margin-top: 29px;
+
+}
+li{
+    color: hsl(233deg 8% 62%);
+    list-style: none;
+    display: inline;
+    padding: 0 0.8em;
+}
+
+button{
+    height: 50px;
+    margin-top: 16px;
+    background-image: linear-gradient(to right, #33cf70 , #2fb9c4);
+    border-radius: 25px;
+    padding: 0.9em 3em;
+    margin-left: 13%;
+    border: none;
+    color: white;
+}
+
+h1{
+    color: #313138;
+}
+
+p{
+    color: #ccccce;
+}
+
+.container{
+    display: flex;
+}
+
+.phone{
+    height: 350px;
+}
+
+.left-box{
+    margin-top: 150px;
+    width: 25%;
+    margin-left: 7.5%;
+
+}
+
+.left-box h1{
+    font-size: 2.5em;
+    font-weight: 300;
+    line-height: 1.3;
+    margin: 0;
+    margin-bottom: 0.5em;
+}
+
+.left-box p{
+        line-height: 1.7;
+        font-size: .9em;
+        margin-bottom: 2.5em;
+
+}
+
+.left-box button{
+    margin-left: 0%;
+}
+
+.right-box{
+    width: 50%;
+    background-image: url(./imgs/bg.svg);
+    background-size: 100%;
+    background-position-x: top;
+    background-position: 50px;
+    background-repeat: no-repeat;
+    margin-left: 16%;
+    margin-right: 0;
+}
+
+.right-box img{
+    width: 780px;
+    margin-right: 0%;
+    padding-right: 1px;
+    height: 130vh;
+}
+
+.card-box{
+    background-color: #f4f5f7;
+    width: 100%;
+}
+
+.card-box h1{
+    font-size: 2.5em;
+    color: #313138;
+    font-weight: 300;
+    line-height: 1.3;
+    margin: 0;
+    margin-bottom: 0.5em;
+    margin-left: 91px;
+}
+
+.card-box p{
+    margin-bottom: 4em;
+    font-size: 1em;
+    line-height: 1.7;
+    margin-left: 91px;
+}
+
+.cards{
+    display: flex;
+    margin: auto;
+    margin-left: 4.5%;
+    margin-right: 5%;
+}
+
+.card-container h1{
+    font-size: 2.5em;
+    color: #313138;
+    font-weight: 300;
+    line-height: 1.3;
+    margin: 0;
+    margin-bottom: 0.5em;
+    margin-left: 91px;
+}
+
+.card{
+    display: flex;
+    width:100%;
+    
     
 }
+
+.card1{
+    width: 20%;
+    margin-left: 2%;
+    margin-left: 91px;
+}
+
+.card1 img{
+    width: 100%;
+}
+
+.card2{
+    width: 20%;
+    margin-left: 2%;
+    margin-left: 91px;
+}
+
+.card2 img{
+    width: 100%;
+}
+
+.card3{
+    width: 20%;
+    margin-left: 2%;
+    margin-left: 91px;
+}
+
+.card3 img{
+    width: 100%;
+}
+
+.card4{
+    width: 20%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-left: 91px;
+}
+
+.card4 img{
+    width: 100%;
+}
+
+footer{
+    background-color: #2d314e;
+}
+
+.foot{
+    display: flex;
+    width: 100%;
+    padding-top: 3%;
+}
+
+.left{
+    width: 25%;
+    margin-left: 6%;
+    margin-right: 5%;
+}
+
+.middle{
+    margin-right: 5%;
+}
+
+.right{
+    margin-left: 6%;
+}
+
+.right button{
+    margin-top: 1%;
+    margin-bottom: 30px;
+}
+
+.right p{
+    padding-bottom: 50px;
+}
+
+.main-container{
+    margin-bottom: 5%;
+}
+
+
+,
